[feat] update hibernate