@@ -4,19 +4,37 @@ import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.orm.hibernate5.LocalSessionFactoryBean;
 
+import javax.sql.DataSource;
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @ComponentScan("com.truespring.messages.app")
 public class AppConfig {
+
+    private DataSource dataSource;
+
+    public AppConfig(DataSource dataSource) {
+        this.dataSource = dataSource;
+    }
+
     @Bean
     public FilterRegistrationBean<AuditingFilter>auditingFilterFilterRegistrationBean() {
         FilterRegistrationBean<AuditingFilter> registration = new FilterRegistrationBean<>();
         AuditingFilter filter = new AuditingFilter();
         registration.setFilter(filter);
         registration.setOrder(Integer.MAX_VALUE);
-        registration.setUrlPatterns(Arrays.asList("/messages/*"));
+        registration.setUrlPatterns(List.of("/v1/*"));
         return registration;
+    }
+
+    @Bean
+    public LocalSessionFactoryBean sessionFactory() {
+        LocalSessionFactoryBean sessionFactoryBean = new LocalSessionFactoryBean();
+        sessionFactoryBean.setDataSource(dataSource);
+        sessionFactoryBean.setPackagesToScan("com.truespring.messages.app");
+        return sessionFactoryBean;
     }
 }
